--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-router-dom": "^6.4.1",
     "styled-components": "^5.3.5"
   },
   "devDependencies": {
@@ -43,6 +44,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-storybook": "^0.6.4",
     "prettier": "^2.7.1",
+    "tsconfig-paths-webpack-plugin": "^4.0.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0"
   }
